# srs_ui_pro

./: CMakeLists.txt  README.md  manifest.xml
action/: dm_server.action  ui_but.action
codeblocks/: CMakeLists.txt  srs_ui_pro.cbp  srs_ui_pro.depend  srs_ui_pro.layout  streamlog.txt_log_in.1
codeblocks/wxsmith/: DM_window.wxs  LogginScreen.wxs  ObjectInfo.wxs  SkypeWindow.wxs  SkypeWindow2.wxs  srs_ui_proframe.wxs
img/.svn/: all-wcprops  entries
img/.svn/text-base/: call_on.gif.svn-base  cam_on.png.svn-base  micro_on.png.svn-base  mute_on.png.svn-base  off.gif.svn-base  skype_fake.png.svn-base  ts_off.png.svn-base  ts_on_orange.png.svn-base  ts_on_red.png.svn-base  ts_on_yellow.png.svn-base  ts_on_yellow2.png.svn-base
include/: DM_window.h  LogginScreen.h  ObjectInfo.h  ProcessManager.h  RosInterface.h  RvizInterface.h  SkypeFunctions.h  SkypeWindow.h  SkypeWindow2.h  srs_ui_proApp.h  srs_ui_proMain.h
launch/: but_assisted_arm_navigation.launch  srs_ui_pro.launch  streamlog.txt_log_out.1
launch/.svn/: all-wcprops  entries
launch/.svn/text-base/: but_assisted_arm_navigation.launch.svn-base  srs_ui_pro.launch.svn-base
msg/: BaseMarkerScale.msg  ExcepcionalCases.msg  RequestEventMSG.msg  srs_ui_proEcho.msg
msg/.svn/: all-wcprops  entries
msg/.svn/text-base/: BaseMarkerScale.msg.svn-base  RequestEventMSG.msg.svn-base
rviz_config/.svn/: all-wcprops  entries
skype_utils/: keypair.pem
skype_utils/.svn/: all-wcprops  entries
skype_utils/.svn/text-base/: robotnik.pem.svn-base
src/: cob_base_marker_server.cpp  cob_ui_pro_teleop.cpp  dm_server.py  grasp_simulator.py  test_dm_server.py  ui_but.py
src/.svn/: all-wcprops  entries
src/.svn/text-base/: cob_goto_marker_server.cpp.svn-base  grasp_simulator.py.svn-base  wait_request_events.py.svn-base
src/GUI/: DM_window.cpp  LogginScreen.cpp  ObjectInfo.cpp  ProcessManager.cc  RosInterface.cpp  RvizInterface.cpp  SkypeFunctions.cpp  SkypeWindow.cpp  SkypeWindow2.cpp  srs_ui_proApp.cpp  srs_ui_proMain.cpp
srv/: GraspSimulator.srv  RequestEvent.srv
srv/.svn/: all-wcprops  entries
srv/.svn/text-base/: GraspSimulator.srv.svn-base
